# freya

./: CLAUDE.md  README.md  index.html  pyproject.toml
src/freya/: __init__.py  core.py  memory.py  personality.py
tests/: test_core.py  test_memory.py  test_personality.py
