[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "freya"
version = "0.1.0"
description = "Self-hosted AI companion framework with personality customization"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
